--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
     <head>
-        <title>Foster Fails, Tails From the Freezer & Beyond</title>
+        <title>Foster Fun</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="page-header">
-        <h1><a href="/">Foster Fails, Tails From the Freezer & Beyond</a></h1>
+        <h1><a href="/">Foster Fun</a></h1>
         </div>
         <div class="content container">
             <div class="row">
